fix(layout): Change min-height to height for container and add overflow properties for better scrolling

--- a/daily-vibes-frontend/src/app/layout.module.css
+++ b/daily-vibes-frontend/src/app/layout.module.css
@@ -1,6 +1,6 @@
 .container {
   max-width: 70rem;
-  min-height: 100vh;
+  height: 100vh; /* Changed from min-height to height */
   margin: 0 auto;
   background-color: white;
   display: flex;
@@ -21,6 +21,7 @@
   display: flex;
   flex: 1;
   background-color: #f5f5f5;
+  overflow: hidden;
 }
 
 .container > main > .sidebar {
@@ -32,6 +33,7 @@
 .container > main > .content {
   flex: 7;
   padding-top: 20px;
+  overflow-y: auto; /* Enables vertical scrolling within content */
 }
 
 .container > footer {
